# gaponet

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  setup.sh  sync_rsl_scripts.sh
outputs/2026-01-10/19-02-17/.hydra/: config.yaml  hydra.yaml
outputs/2026-01-10/19-45-50/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/2026-01-10/19-47-18/.hydra/: hydra.yaml
outputs/2026-01-10/19-50-11/.hydra/: config.yaml  hydra.yaml
scripts/imitation_learning/robomimic/: play_direct.py
scripts/real_deploy/: goal_reaching_server.py
scripts/rsl_rl/: deploy.py  inference_jit.py  play.py  plot_delta_action.py  process_env.py  train.py
scripts/rsl_rl/transformer_rsl/: ActorCriticTransformer.py  on_policy_runner.py
scripts/tools/: record_direct.py  replay_direct.py
source/isaaclab/isaaclab/assets/articulation/: articulation.py
source/isaaclab/isaaclab/devices/: __init__.py
source/isaaclab/isaaclab/devices/openxr/: __init__.py  openxr_device.py  se3_handtracking.py  se3_openxrtracking.py
source/isaaclab_assets/isaaclab_assets/robots/: __init__.py  unitree_h1_2.py
source/isaaclab_tasks/isaaclab_tasks/direct/humanoid_moter/: __init__.py  command.txt  humanoid_amp_env.py  humanoid_amp_env_cfg.py
source/sim2real/: setup.py
source/sim2real/config/: extension.toml
source/sim2real_assets/: setup.py
source/sim2real_assets/config/: extension.toml
source/sim2real_assets/sim2real_assets/: payload.py
source/sim2real_assets/sim2real_assets/robots/: __init__.py  fourior.py  unitree_h1_2.py
(+43 files in other folders)
