[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gaponet"
version = "0.1.0"
description = "GapONet: Sim-to-Real Humanoid Robot Control with DeepONet, Transformer, and MLP"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GapONet Developers"}
]
keywords = ["gaponet", "sim2real", "humanoid", "deeponet", "transformer", "isaaclab", "robotics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]

dependencies = [
    "isaaclab",
    "isaaclab-assets",
    "isaaclab-mimic",
    "isaaclab-rl",
    "isaaclab-tasks",
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "gymnasium>=0.28.0",
    "pinocchio>=2.6.0",
    "pytorch-kinematics>=0.0.1",
    "psutil>=5.9.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "wandb>=0.15.0",
    "tensorboard>=2.13.0",
    "matplotlib>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/gaponet"
Repository = "https://github.com/yourusername/gaponet"
Issues = "https://github.com/yourusername/gaponet/issues"

[tool.setuptools]
packages = ["sim2real", "sim2real_assets"]

[tool.setuptools.package-dir]
"" = "source"

